welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: not found: value get
	if ((getMondeHauteur()-1==getY())&&(getMondeLargeur()-1==get(X))){
                                                                 ^ColumnByColumn:1: error: not found: value X
	if ((getMondeHauteur()-1==getY())&&(getMondeLargeur()-1==get(X))){
                                                                     ^